livrable cours 5 finalisations